workloads/unifi/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-mongodb
  labels:
    app: unifi-mongodb
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: unifi-mongodb
  template:
    metadata:
      labels:
        app: unifi-mongodb
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: workload-type
                    operator: In
                    values:
                      - general
      containers:
        - name: mongodb
          image: docker.io/mongo:7.0
          ports:
            - containerPort: 27017
              name: mongodb
          volumeMounts:
            - name: data
              mountPath: /data/db
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: unifi-mongodb-data-lh
        - name: init-script
          configMap:
            name: unifi-mongo-init
