workloads/unifi/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-mongodb
  labels:
    app: unifi-mongodb
spec:
  type: ClusterIP
  selector:
    app: unifi-mongodb
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
      name: mongodb
