workloads/unifi/unifi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-inform
  labels:
    app: unifi
  annotations:
    metallb.io/loadBalancerIPs: "192.168.6.10,fd00:6::10"
spec:
  ipFamilyPolicy: PreferDualStack
  ipFamilies: [IPv4, IPv6]
  type: LoadBalancer
  selector:
    app: unifi
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: inform
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-web
  labels:
    app: unifi
  annotations:
    metallb.io/loadBalancerIPs: "192.168.6.25,fd00:6::25"
spec:
  ipFamilyPolicy: PreferDualStack
  ipFamilies: [IPv4, IPv6]
  type: LoadBalancer
  selector:
    app: unifi
  ports:
    - port: 8443
      targetPort: 8443
      nodePort: 30443
      protocol: TCP
      name: web-ui
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-discovery
  labels:
    app: unifi
  annotations:
    metallb.io/loadBalancerIPs: "192.168.6.12,fd00:6::12"
spec:
  ipFamilyPolicy: PreferDualStack
  ipFamilies: [IPv4, IPv6]
  type: LoadBalancer
  selector:
    app: unifi
  ports:
    - port: 10001
      targetPort: 10001
      protocol: UDP
      name: discovery
