workloads/unifi/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi
  namespace: default
spec:
  parentRefs:
    - name: shared-gateway
      sectionName: unifi-ts-2143-https
  hostnames:
    - unifi.ts.2143.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: unifi
          port: 443
